# 01_tiled_gemm

./: .gitignore  00_naive.cu  01_tiled.cu  02_tiled_coalesced.cu  03_regblock.cu  04_warp_rebalance.cu  05_bank_pad_vec.cu  06_k32_tpb4.cu  07_sweep.cu  08_splitk_z.cu  09_multibuf.cu  10_multibuf_sweep.cu  11_tile128.cu  12_wider_n.cu  13_ldg_async.cu  CMakeLists.txt  README.md  gemm_common.h  gemm_mainloop.h  launch_helpers.h  launchers.h  main.cu  multi_tile.cu  multi_tile_v2.cu  naive_gemm.cu  tiled_coalesced_gemm.cu  tiled_gemm.cu  tiled_kernel.h  trait_based_kernels.cu
common/: bench_harness.h
docs/: 01_tiled_gemm.md
scripts/: ncu_sol.sh  profile_layer0.sh
